# ai-engineering-project-collection

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: gemini.py
app/projects/p01_chatbot/: router.py
app/projects/p02_streaming/: router.py
app/projects/p03_summarizer/: router.py
